--- a/trunk/SourceCode/DataAccess/DataAccess.csproj
+++ b/trunk/SourceCode/DataAccess/DataAccess.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\Dependencies\SeallNet.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Xml.Linq" />
