--- a/trunk/SourceCode/FixedAsset/FixedAsset.csproj
+++ b/trunk/SourceCode/FixedAsset/FixedAsset.csproj
@@ -33,6 +33,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SeallNet.WebControls">
+      <HintPath>..\Dependencies\SeallNet.WebControls.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
@@ -91,6 +94,8 @@
       <DependentUpon>user_list.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="AppCode\BasePage.cs" />
+    <Compile Include="AppCode\UiConst.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
