--- a/trunk/SourceCode/Domain/Domain.csproj
+++ b/trunk/SourceCode/Domain/Domain.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SeallNet.Utility">
+      <HintPath>..\Dependencies\SeallNet.Utility.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetEnum.cs" />
     <Compile Include="Domain\Procurementschedulehead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchObject\ProcurementscheduleheadSearch.cs" />
