--- a/trunk/SourceCode/FixedAsset/Web.config
+++ b/trunk/SourceCode/FixedAsset/Web.config
@@ -13,8 +13,13 @@
       <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
-    </httpHandlers>    
-    <pages   controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false" />
+    </httpHandlers>
+    <pages   controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false">
+      <controls>
+        <add tagPrefix="asp" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit"/>
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      </controls>
+    </pages>
     <customErrors mode="RemoteOnly" defaultRedirect="404.aspx"/>
     <sessionState mode="InProc" cookieless="false" timeout="30"/>
     <httpRuntime requestValidationMode="2.0"/>
