--- a/trunk/SourceCode/FixedAsset/FixedAsset.csproj
+++ b/trunk/SourceCode/FixedAsset/FixedAsset.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Admin\ProcurePlanList.aspx.cs">
       <DependentUpon>ProcurePlanList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Admin\ProcurePlanList.aspx.designer.cs">
       <DependentUpon>ProcurePlanList.aspx</DependentUpon>
