--- a/trunk/SourceCode/DataAccess/DataAccess.csproj
+++ b/trunk/SourceCode/DataAccess/DataAccess.csproj
@@ -46,11 +46,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoCode\AssetcategoryManagement.cs" />
+    <Compile Include="AutoCode\AssetmaintaindetailManagement.cs" />
     <Compile Include="AutoCode\AssetmaintainManagement.cs" />
     <Compile Include="AutoCode\AssetManagement.cs" />
+    <Compile Include="AutoCode\AssetmovedetailManagement.cs" />
     <Compile Include="AutoCode\AssetmoveManagement.cs" />
+    <Compile Include="AutoCode\AssetremovedetailManagement.cs" />
     <Compile Include="AutoCode\AssetremoveManagement.cs" />
+    <Compile Include="AutoCode\AssetsetupdetailManagement.cs" />
     <Compile Include="AutoCode\AssetsetupinfoManagement.cs" />
+    <Compile Include="AutoCode\AssetsupplierManagement.cs" />
     <Compile Include="AutoCode\BaccountManagement.cs" />
     <Compile Include="AutoCode\ProcurementcontractdetailManagement.cs" />
     <Compile Include="AutoCode\ProcurementcontractManagement.cs" />
@@ -59,11 +64,16 @@
     <Compile Include="BaseManagement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserCode\AssetcategoryManagement.cs" />
+    <Compile Include="UserCode\AssetmaintaindetailManagement.cs" />
     <Compile Include="UserCode\AssetmaintainManagement.cs" />
     <Compile Include="UserCode\AssetManagement.cs" />
+    <Compile Include="UserCode\AssetmovedetailManagement.cs" />
     <Compile Include="UserCode\AssetmoveManagement.cs" />
+    <Compile Include="UserCode\AssetremovedetailManagement.cs" />
     <Compile Include="UserCode\AssetremoveManagement.cs" />
+    <Compile Include="UserCode\AssetsetupdetailManagement.cs" />
     <Compile Include="UserCode\AssetsetupinfoManagement.cs" />
+    <Compile Include="UserCode\AssetsupplierManagement.cs" />
     <Compile Include="UserCode\BaccountManagement.cs" />
     <Compile Include="UserCode\ProcurementcontractdetailManagement.cs" />
     <Compile Include="UserCode\ProcurementcontractManagement.cs" />
