--- a/trunk/SourceCode/Service/Service.csproj
+++ b/trunk/SourceCode/Service/Service.csproj
@@ -41,11 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetcategoryService.cs" />
+    <Compile Include="AssetmaintaindetailService.cs" />
     <Compile Include="AssetmaintainService.cs" />
+    <Compile Include="AssetmovedetailService.cs" />
     <Compile Include="AssetmoveService.cs" />
+    <Compile Include="AssetremovedetailService.cs" />
     <Compile Include="AssetremoveService.cs" />
     <Compile Include="AssetService.cs" />
+    <Compile Include="AssetsetupdetailService.cs" />
     <Compile Include="AssetsetupinfoService.cs" />
+    <Compile Include="AssetsupplierService.cs" />
     <Compile Include="BaccountService.cs" />
     <Compile Include="BaseService.cs" />
     <Compile Include="ProcurementcontractdetailService.cs" />
