--- a/SourceCode/Domain/Domain.csproj
+++ b/SourceCode/Domain/Domain.csproj
@@ -47,9 +47,14 @@
     <Compile Include="Domain\Asset.cs" />
     <Compile Include="Domain\Assetcategory.cs" />
     <Compile Include="Domain\Assetmaintain.cs" />
+    <Compile Include="Domain\Assetmaintaindetail.cs" />
     <Compile Include="Domain\Assetmove.cs" />
+    <Compile Include="Domain\Assetmovedetail.cs" />
     <Compile Include="Domain\Assetremove.cs" />
+    <Compile Include="Domain\Assetremovedetail.cs" />
+    <Compile Include="Domain\Assetsetupdetail.cs" />
     <Compile Include="Domain\Assetsetupinfo.cs" />
+    <Compile Include="Domain\Assetsupplier.cs" />
     <Compile Include="Domain\Baccount.cs" />
     <Compile Include="Domain\Procurementcontract.cs" />
     <Compile Include="Domain\Procurementcontractdetail.cs" />
@@ -57,11 +62,16 @@
     <Compile Include="Domain\Procurementschedulehead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchObject\AssetcategorySearch.cs" />
+    <Compile Include="SearchObject\AssetmaintaindetailSearch.cs" />
     <Compile Include="SearchObject\AssetmaintainSearch.cs" />
+    <Compile Include="SearchObject\AssetmovedetailSearch.cs" />
     <Compile Include="SearchObject\AssetmoveSearch.cs" />
+    <Compile Include="SearchObject\AssetremovedetailSearch.cs" />
     <Compile Include="SearchObject\AssetremoveSearch.cs" />
     <Compile Include="SearchObject\AssetSearch.cs" />
+    <Compile Include="SearchObject\AssetsetupdetailSearch.cs" />
     <Compile Include="SearchObject\AssetsetupinfoSearch.cs" />
+    <Compile Include="SearchObject\AssetsupplierSearch.cs" />
     <Compile Include="SearchObject\BaccountSearch.cs" />
     <Compile Include="SearchObject\ProcurementcontractdetailSearch.cs" />
     <Compile Include="SearchObject\ProcurementcontractSearch.cs" />
