--- a/SourceCode/IService/IService.csproj
+++ b/SourceCode/IService/IService.csproj
@@ -52,10 +52,17 @@
     <Compile Include="IAssetsetupinfoService.cs" />
     <Compile Include="IAssetsupplierService.cs" />
     <Compile Include="IBaccountService.cs" />
+    <Compile Include="ILbfgsService.cs" />
+    <Compile Include="ILbfgsxmtService.cs" />
+    <Compile Include="IMenuitemService.cs" />
     <Compile Include="IProcurementcontractdetailService.cs" />
     <Compile Include="IProcurementcontractService.cs" />
     <Compile Include="IProcurementscheduledetailService.cs" />
     <Compile Include="IProcurementscheduleheadService.cs" />
+    <Compile Include="IRoleinfoService.cs" />
+    <Compile Include="IRolepermissionService.cs" />
+    <Compile Include="ITuserService.cs" />
+    <Compile Include="IUsermaproleinfoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
