--- a/SourceCode/FixedAsset/Web.config
+++ b/SourceCode/FixedAsset/Web.config
@@ -20,7 +20,7 @@
         <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
       </controls>
     </pages>
-    <customErrors mode="RemoteOnly" defaultRedirect="404.aspx"/>
+    <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" cookieless="false" timeout="30"/>
     <httpRuntime requestValidationMode="2.0"/>
   </system.web>
